--- a/lib/safitech_backend_web/components/layouts/app.html.heex
+++ b/lib/safitech_backend_web/components/layouts/app.html.heex
@@ -1,13 +1,21 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <title>Safitech Backend</title>
-  <%= Phoenix.HTML.Tag.csrf_meta_tag() %>
-  <%= Phoenix.HTML.Tag.link(rel: "stylesheet", href: ~p"/assets/app.css") %>
-</head>
-<body>
-  <%= @inner_content %>
-  <%= Phoenix.HTML.Tag.script(src: ~p"/assets/app.js") %>
-</body>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="csrf-token" content={get_csrf_token()} />
+    <.live_title suffix=" · Safitech">
+      <%= assigns[:page_title] || "Safitech" %>
+    </.live_title>
+    <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"}/>
+    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
+  </head>
+  <body>
+    <header>
+      <h1>Safitech Backend</h1>
+    </header>
+    <main>
+      <%= @inner_content %>
+    </main>
+  </body>
 </html>
-
